--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="backdrop"></div>
     <header id="main-header">
       <h1>play tic tac toe</h1>
       <p>Built with HTML, CSS, javaScript</p>
     </header>
     <main>
-      <aside>
+      <aside class="modal" id="config-overlay">
         <h2>Choose your name</h2>
-        <form>
+        <form class="form-control">
           <div>
             <label for="playername">Player Name</label>
             <input type="text" name="playername" id="playername" />
@@ -38,7 +39,7 @@
             <acticle>
               <h2>Player 1</h2>
               <h3>Player name</h3>
-              <p>X</p>
+              <p class="player-symbol">X</p>
               <button class="btn btn-alt">edit</button>
             </acticle>
           </li>
@@ -46,21 +47,21 @@
             <acticle>
               <h2>player 2</h2>
               <h3>Player name</h3>
-              <p>O</p>
+              <p class="player-symbol">O</p>
               <button class="btn btn-alt">edit</button>
             </acticle>
           </li>
         </ol>
+        <button class="btn">start new game</button>
       </section>
-      <button class="btn">start new game</button>
       <section id="active-game">
-        <article>
-          <h3>you won <span id="winner-name">player name</span>!</h3>
+        <article id="game-over">
+          <h2>you won <span id="winner-name">player name</span>!</h2>
           <p>click "Start New Game" above, to start new game!</p>
         </article>
         <p>it's your turn <span id="active-player-name">player name</span>!</p>
-        <ol>
-          <li></li>
+        <ol id="game-board">
+          <li class="disabled">X</li>
           <li></li>
           <li></li>
 
